--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1,161 +1,125 @@
-.bodyStyle{
-	<!--background: #2f3036;-->
-	background: #white;
-	margin: 0 5% 0 5%;	
+.bodystyle {
+  background: #f5f5f5;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  color: #343a40;
 }
+
+.nav {
+  height: 60px;
+  width: 100%;
+  background: #1c1e21;
+  padding: 0 5%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  z-index: 1000;
+}
+
+.nav img {
+  height: 40px;
+}
+
 ul {
-	list-style-type:none;
-	float: right;
-	margin:0;
-	position: fixed;
-	right:0;
-	top: 0;
-	margin-bottom: 150px;
+  list-style: none;
+  margin: 0;
+  margin-left: auto;
+  display: flex;
+  gap: 1rem;
+  padding: 0;
 }
-li {
-	margin-right: 1px;
-	float: left;
-}
+
 li a {
-	display:block;
-	min-width:140px;
-	height: 50px;
-	text-align: center;
-	padding-bottom: 60px;
-	padding-top: 25px;
-	line-height: 50px;
-	font-family: 'Indie Flower', cursive;
-	font-size: 20px;
-	color: #fff;
-	background: #2f3036;
-	text-decoration: none;
+  display: block;
+  padding: 10px 15px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: #f8f9fa;
+  text-decoration: none;
+  transition: color .3s;
 }
-li:hover a {
-	background: #8b2528;
+
+li a:hover {
+  color: #3498db;
 }
-li:hover ul a {
-	background: #2f3036;
-	color: #white;
-	height: 40px;
-	line-height: 40px;
+
+.divStyle,
+.divStyle2 {
+  padding: 80px 5%;
+  background-color: #ffffff;
+  margin: 80px 10px 0 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  font-family: 'Roboto', sans-serif;
+  color: #343a40;
 }
-li:hover ul a:hover {
-	background: #8b2528;
-	color: #fff;
-}	
-li ul {
-	display: none;
+
+.divStyle3 {
+  padding: 40px 5%;
+  background-color: #1c1e21;
+  color: #f8f9fa;
+  margin: 80px 0 0 0;
+  font-family: 'Roboto', sans-serif;
 }
-li ul li {
-	display: inline;
-	float: none;
+
+.divFill {
+  padding: 60px 0 0 0;
+  margin: 0;
 }
-li ul li a {
-	width: auto;
-	min-width: 100px;
-	padding: 0 20px;
+
+h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
 }
-.nav{
-	height: 50px;
-	width: 100%;
-	background: #2f3036;
-	padding-bottom: 100px;
-	position: fixed;
-	left:0;
-	top:0;
+
+p {
+  font-size: 1.1rem;
+  line-height: 1.6;
 }
-.divStyle2{
-	padding: 50px 5% 50px 5%;
-	background-color: grey;
-	margin: 0 10px 0px 10px;
-	font-family: 'Indie Flower', cursive;
-	color: white;
+
+form {
+  margin: auto;
+  position: static;
+  width: 100%;
+  max-width: 600px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  color: #343a40;
 }
-.divStyle3{
-	padding: 10px 5% 10px 5%;
-	background-color: grey;
-	margin: 0 10px 0px 10px;
-	font-family: 'Indie Flower', cursive;
-	color: white;
-}
-.divStyle{
-	padding: 50px 5% 50px 5%;
-	background-color: #a7a7a7;
-	margin: 0 10px 0px 10px;
-	font-family: 'Indie Flower', cursive;
-	color: white;
-}
-.divFill{
-	padding: 50px 5% 0px 5%;
-	margin: 0 10px 0px 0px;
-}
-h1{
-	font-size: 60px;	
-}
-p{
-	font-size: 170%;	
-}
-form{
-	<!--background: -webkit-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
-  	background: -moz-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
-  	background: linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);-->
-  	margin: auto;
-  	position: static;
-  	width: 50%;
-  	height: 475px;
- 	font-family: 'Indie Flower', cursive;
-  	font-size: 25px;
-	font-style: italic;
-	line-height: 24px;
- 	font-weight: bold;
-	color: black;
-	text-decoration: none;
-  	border-radius: 10px;
-  	padding: 10px;
-  	border: 1px solid #999;
-  	border: inset 1px solid #333;
-  	-webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  	-moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  	box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-}
-input#written {
-	position: static;
-  	width: 60%;
-  	display: block;
-  	border: 1px solid #999;
-  	height: 30px;
-  	border-radius: 5px;
-  	font-family: 'Indie Flower', cursive;
-  	font-size: 25px;
-  	-webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  	-moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  	box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-}
-input#button{
-	width: 100px;
-	margin-top: 5%;
-  background: white;
-  color: grey;
-  font-family: 'Indie Flower', cursive;
-  font-size: 15px;
-  height: 30px;
-  border-radius: 15px;
-  border: 1p solid #999;
-}
+
+input#written,
 textarea {
-	position: static;
-	font-family: 'Indie Flower', cursive;
-	font-size: 25px;
-	border-radius: 5px;
-  	width: 60%;
-  	height: 30%;
-  	display: block;
-  	border: 1px solid #999;
-  	-webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  	-moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  	box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  width: 100%;
+  display: block;
+  padding: 10px 15px;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  margin-bottom: 1rem;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
 }
+
+textarea {
+  min-height: 150px;
+}
+
+input#button {
+  width: 120px;
+  background: #1c1e21;
+  color: #f8f9fa;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  margin-right: 10px;
+  transition: background .3s;
+}
+
 input#button:hover {
-  background: #a7a7a7;
-  color: #8b2528;
+  background: #3498db;
+  color: #fff;
 }
+
